# AutoGLM-mcp-server

./: .gitignore  README.md  README_zh.md  claude_config_zh.json  pyproject.toml  server.py
mcp_phone_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
